Test listener class updated